src/test/deca/syntax/valid/class/11_instanceof.deca
/*
	Description: utilisation de l'instanceof

	Resultat syntaxiquement valid

	Date: 20/01/2020

*/



{
	

	 if( this.hello(z) instanceof type)
	{
	}

	
	 if( this.hello instanceof type)
	{
	}

}
