src/test/deca/syntax/invalid/class/mal_utilisation_instancof2.deca
/*
	Description: instance of sans declaration de type

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



{
	

	 if(hello instanceof)
	{
	}

}
